<resources>
    <string name="app_name">PittNow</string>
    <string name="sports">Sports</string>
    <string name="concerts">Concerts</string>
    <string name="clubs">Clubs</string>
    <string name="campus">Campus</string>
    <string name="other">Other</string>
    <string name="locations">Locations</string>
    <string name="print">Printing Stations</string>
    <string name="title_activity_print_map">Map</string>
    <string name="dining">Campus Dining</string>
    <string name="fitness">Fitness Centers</string>
    <string name="library">Libraries</string>
    <string name="computer">Computing Labs</string>
    <string name="links">Quick Links</string>
    <string name="title_activity_dining_maps">Map</string>
    <string name="sport_title">Sporting Events</string>
    <string name="campus_event_title">Campus Events</string>
    <string name="campus_location_title">Campus Locations</string>
    <string name="data_error">Error Getting Data</string>
    <string name="courseweb">CourseWeb</string>
    <string name="mypitt">MyPitt</string>
    <string name="email">Pitt Email</string>
    <string name="panthercentral">Panther Central</string>
    <string name="housing">Housing</string>
    <string name="tech">Technology</string>
    <string name="pay">PittPay</string>
    <string name="athletics">Athletics</string>
    <string name="news">News</string>
    <string name="meeting">Meetings</string>
    <string name="tournament">Tournaments</string>
    <string name="fairmarketplace">Fairs/Marketplaces</string>
    <string name="performance">Performances</string>
    <string name="conference">Conferences</string>
    <string name="movie">Movies</string>
    <string name="display">Displays</string>
    <string name="fitnessclass">Fitness Classes</string>
    <string name="fundraiser">Fundraisers</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="about_text">PittNow is an app created for the 2017 Pitt App Challenge. It seeks to be a hub for information for the students at the University of Pittsburgh.</string>
    <string name="notification">Notifications</string>
    <string name="sportsnotifications">Sports Notifications</string>
    <string name="baseball">Baseball</string>
    <string name="women_basketball">Women\'s Basketball</string>
    <string name="men_basketball">Men\'s Basketball</string>
    <string name="women_gymnastics">Women\'s Gymnastics</string>
    <string name="softball">Softball</string>
    <string name="swimming_diving">Swimming &amp; Diving</string>
    <string name="wrestling">Wrestling</string>
    <string name="football">Football</string>
    <string name="sport_events">Sporting Events</string>
    <string-array name="location_array">
        <item>Campus Dining</item>
        <item>Computing Labs</item>
        <item>Fitness Centers</item>
        <item>Libraries</item>
        <item>Printing Stations</item>
    </string-array>
</resources>
