<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sports"
        android:enabled="true"
        android:icon="@drawable/ic_sports"
        android:title="@string/sports"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_campus"
        android:enabled="true"
        android:icon="@drawable/ic_campus"
        android:title="@string/campus"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_location"
        android:enabled="true"
        android:icon="@drawable/ic_locations"
        android:title="@string/locations"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_links"
        android:enabled="true"
        android:icon="@drawable/ic_web"
        android:title="@string/links"
        app:showAsAction="ifRoom" />
</menu>