<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ryanm.pushnotify.MainActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/pagetitle"
        android:text="@string/sport_events"
        android:background="@color/gold"
        android:padding="10dp"
        android:textSize="25sp"
        android:gravity="center"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/state"
        app:itemTextColor="@drawable/state"
        app:menu="@menu/bottom_navigation_main" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/activity_main_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/pagetitle">
        <com.example.ryanm.pushnotify.CustomScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myscroll"
            android:layout_alignParentTop="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/sport_events">
                    <ProgressBar
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/locations"
                    android:visibility="gone">
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/dining"
                        android:onClick="OpenDining"
                        android:layout_marginTop="5dp">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/computer"
                        android:onClick="OpenComputer">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/fitness"
                        android:onClick="OpenFitness">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/library"
                        android:onClick="OpenLibrary">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/print"
                        android:onClick="OpenPrint">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/events"
                    android:visibility="gone">
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/concerts"
                        android:onClick="OpenEvents"
                        android:layout_marginTop="5dp">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/conference"
                        android:onClick="OpenEvents">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/display"
                        android:onClick="OpenEvents">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/fairmarketplace"
                        android:onClick="OpenEvents">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/fitnessclass"
                        android:onClick="OpenEvents">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/fundraiser"
                        android:onClick="OpenEvents">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/meeting"
                        android:onClick="OpenEvents">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/movie"
                        android:onClick="OpenEvents">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/performance"
                        android:onClick="OpenEvents">
                    </Button>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/tournament"
                        android:onClick="OpenEvents">
                    </Button>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:id="@+id/links"
                    android:visibility="gone">
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/courseweb"
                        android:gravity="center"
                        android:id="@+id/button1"

                        android:onClick="openCourseweb" />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/mypitt"
                        android:gravity="center"
                        android:id="@+id/button2"

                        android:onClick="openMyPitt"
                        android:layout_below="@id/button1"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/email"
                        android:id="@+id/button3"
                        android:gravity="center"

                        android:onClick="openEmail"
                        android:layout_below="@id/button2"
                        />
                    <Button

                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/panthercentral"
                        android:id="@+id/button4"
                        android:gravity="center"

                        android:onClick="openPantherCentral"
                        android:layout_below="@id/button3"
                        />
                    <Button

                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/housing"
                        android:id="@+id/button5"
                        android:gravity="center"

                        android:onClick="openHousing"
                        android:layout_below="@id/button4"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/tech"
                        android:id="@+id/button6"
                        android:gravity="center"

                        android:onClick="openTech"
                        android:layout_below="@id/button5"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/pay"
                        android:id="@+id/button7"
                        android:gravity="center"

                        android:onClick="openPay"
                        android:layout_below="@id/button6"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/library"
                        android:id="@+id/button8"
                        android:gravity="center"

                        android:onClick="openLibrary"
                        android:layout_below="@id/button7"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/athletics"
                        android:id="@+id/button9"
                        android:gravity="center"

                        android:onClick="openAthletics"
                        android:layout_below="@id/button8"
                        />
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/news"
                        android:id="@+id/button10"
                        android:gravity="center"

                        android:onClick="openNews"
                        android:layout_below="@id/button9" />
                </RelativeLayout>
            </LinearLayout>
        </com.example.ryanm.pushnotify.CustomScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
